# llvm-py-pass

./: .gitignore  CMakeLists.txt  README.md  pass.py  plugin.cpp  py.cpp
example/: .gitignore  pass.py  rename.py  run.py  test.c  test.ll
share/cmake/pybind11/: pybind11Targets.cmake
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/hello/: hello-clang.c  hello-opt.ll  run.py
test/rename/: rename-clang.c  rename-opt.ll  run.py
